src/assets/sass/blocks/_prose.scss
.prose {
  --wrapper-max-width: 60rem;
  --flow-space: var(--space-l-xl);
  padding-inline: var(--gutter);
  figcaption {
    --flow-space: 0;
  }
}

.prose :is(h2, h3, h4) + *,
p + p {
  --flow-space: var(--space-s-m);
}

.prose :is(nav + p) {
  @media (min-width: 80rem) {
    --flow-space: var(--space-s-m);
  }
}

